--- a/index.html
+++ b/index.html
@@ -1,41 +1,36 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" type="text/css" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />
     <title>Attempt #1</title>
-</head>
+  </head>
 
-<body>
+  <body class="background">
+    <div class="card">
+      <div class="card__column">
+        <h1 class="card__title">Get <span class="card__title-purple">insights</span> that help your business grow.</h1>
+        <p class="card__text">Discover the benefits of data analytics and make better decisions regarding revenue,customer experience,and overall efficiency</p>
 
-    <div class="background">
-        <h1 class="description">Get <em>insights</em> that help <br>your business grow.</h1>
-
-        <p>Discover the benefits of data analytics and make<br>better decisions regarding
-            revenue,customer<br>experience,and
-            overall efficiency </p>
-
-        <div class="down-section">
-            <h2>10K+</h2>
-            <h5>COMPANIES</h5>
-
-
-            <h2>314</h2>
-            <h5>TEMPLATES</h5>
-
-            <h2>12M+</h2>
-            <h5>QUERIES</h5>
+        <div class="stats">
+          <div class="stats__column">
+            <h2 class="stats__title">10K+</h2>
+            <p class="stats__text">COMPANIES</p>
+          </div>
+          <div class="stats__column">
+            <h2 class="stats__title">314</h2>
+            <p class="stats__text">TEMPLATES</p>
+          </div>
+          <div class="stats__column">
+            <h2 class="stats__title">12M+</h2>
+            <p class="stats__text">QUERIES</p>
+          </div>
         </div>
-        <div class="side-image">
-            <img src="image-header-desktop.jpg">
-        </div>
+      </div>
+
+      <figure class="side-image"></figure>
     </div>
-
-
-
-</body>
-
+  </body>
 </html>
